# Powershell-MCP

./: GitHub 信息.txt  MCP配置指南.md  PowerShell-MCP使用指南.md  PyPI包构建教程.md  README.md  claude_desktop_config.json
build-related/: MANIFEST.in  pyproject.toml  requirements.txt
build-related/source-code/mcp_powershell/: __init__.py
build-related/source-code/mcp_powershell.egg-info/: entry_points.txt
build-related/source-code/powershell_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
source-code/mcp_powershell/: __main__.py
source-code/mcp_powershell.egg-info/: PKG-INFO  SOURCES.txt
source-code/powershell_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
