[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powershell-mcp"
version = "1.0.5"
authors = [
    {name = "DataMaster", email = "your.email@example.com"}
]
description = "PowerShell MCP toolkit for executing PowerShell commands via MCP protocol"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["powershell", "mcp", "server", "automation", "cli"]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/datamaster/powershell-mcp"
"Bug Reports" = "https://github.com/datamaster/powershell-mcp/issues"
"Source" = "https://github.com/datamaster/powershell-mcp"

[project.scripts]
powershell-mcp = "mcp_powershell:main"

[tool.setuptools.packages.find]
where = ["source-code"]

[tool.setuptools.package-data]
"mcp_powershell" = ["*.json", "*.yaml", "*.txt"]